Aufgabe1/output/miniPParser.java
// $ANTLR 3.4 /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g 2015-03-30 17:18:49

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class miniPParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDITION", "ALLOCATE", "CLAMP_CLOSE", "CLAMP_OPEN", "CommentHidden", "Compare_operators", "DIVISION", "HiddenCondition", "INSTRUCTION_END", "INSTRUCTION_NEXT", "Identifier", "Integer_value", "MULTIPLICATION", "My_od", "Real_vlaue", "SUBTRACTION", "String_value", "'begin'", "'boolean'", "'do'", "'else'", "'end'", "'false'", "'fi'", "'if'", "'integer'", "'println'", "'program'", "'read'", "'real'", "'string'", "'then'", "'true'", "'while'"
    };

    public static final int EOF=-1;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int ADDITION=4;
    public static final int ALLOCATE=5;
    public static final int CLAMP_CLOSE=6;
    public static final int CLAMP_OPEN=7;
    public static final int CommentHidden=8;
    public static final int Compare_operators=9;
    public static final int DIVISION=10;
    public static final int HiddenCondition=11;
    public static final int INSTRUCTION_END=12;
    public static final int INSTRUCTION_NEXT=13;
    public static final int Identifier=14;
    public static final int Integer_value=15;
    public static final int MULTIPLICATION=16;
    public static final int My_od=17;
    public static final int Real_vlaue=18;
    public static final int SUBTRACTION=19;
    public static final int String_value=20;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "if_statement", "deklarationen", "then_statement", "miniP", 
    "while_statement", "else_statement", "my_do", "anweisungen", "dataType", 
    "print_statement", "compare", "arithmetic_operators", "valueAllocate", 
    "read_statement"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public miniPParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public miniPParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public miniPParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return miniPParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g"; }



    // $ANTLR start "miniP"
    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:3:1: miniP : 'program' ( deklarationen )* 'begin' ( anweisungen )* 'end' ;
    public final void miniP() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "miniP");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(3, 0);

        try {
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:3:8: ( 'program' ( deklarationen )* 'begin' ( anweisungen )* 'end' )
            dbg.enterAlt(1);

            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:5:2: 'program' ( deklarationen )* 'begin' ( anweisungen )* 'end'
            {
            dbg.location(5,2);
            match(input,31,FOLLOW_31_in_miniP14); 
            dbg.location(5,12);
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:5:12: ( deklarationen )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==22||LA1_0==29||(LA1_0 >= 33 && LA1_0 <= 34)) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:5:13: deklarationen
            	    {
            	    dbg.location(5,13);
            	    pushFollow(FOLLOW_deklarationen_in_miniP17);
            	    deklarationen();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(5,29);
            match(input,21,FOLLOW_21_in_miniP21); 
            dbg.location(5,37);
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:5:37: ( anweisungen )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==Identifier||LA2_0==28||LA2_0==30||LA2_0==32||LA2_0==37) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:5:38: anweisungen
            	    {
            	    dbg.location(5,38);
            	    pushFollow(FOLLOW_anweisungen_in_miniP24);
            	    anweisungen();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(5,52);
            match(input,25,FOLLOW_25_in_miniP28); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(5, 56);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "miniP");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "miniP"



    // $ANTLR start "deklarationen"
    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:7:1: deklarationen : dataType Identifier ( INSTRUCTION_NEXT Identifier )* INSTRUCTION_END ;
    public final void deklarationen() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "deklarationen");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(7, 0);

        try {
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:8:2: ( dataType Identifier ( INSTRUCTION_NEXT Identifier )* INSTRUCTION_END )
            dbg.enterAlt(1);

            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:8:4: dataType Identifier ( INSTRUCTION_NEXT Identifier )* INSTRUCTION_END
            {
            dbg.location(8,4);
            pushFollow(FOLLOW_dataType_in_deklarationen38);
            dataType();

            state._fsp--;

            dbg.location(8,13);
            match(input,Identifier,FOLLOW_Identifier_in_deklarationen40); 
            dbg.location(8,24);
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:8:24: ( INSTRUCTION_NEXT Identifier )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==INSTRUCTION_NEXT) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:8:25: INSTRUCTION_NEXT Identifier
            	    {
            	    dbg.location(8,25);
            	    match(input,INSTRUCTION_NEXT,FOLLOW_INSTRUCTION_NEXT_in_deklarationen43); 
            	    dbg.location(8,42);
            	    match(input,Identifier,FOLLOW_Identifier_in_deklarationen45); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}

            dbg.location(8,55);
            match(input,INSTRUCTION_END,FOLLOW_INSTRUCTION_END_in_deklarationen49); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(8, 69);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "deklarationen");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "deklarationen"



    // $ANTLR start "anweisungen"
    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:10:1: anweisungen : ( ( ( ( Identifier valueAllocate ) | read_statement | print_statement ) INSTRUCTION_END ) | if_statement | while_statement );
    public final void anweisungen() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "anweisungen");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(10, 0);

        try {
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:2: ( ( ( ( Identifier valueAllocate ) | read_statement | print_statement ) INSTRUCTION_END ) | if_statement | while_statement )
            int alt5=3;
            try { dbg.enterDecision(5, decisionCanBacktrack[5]);

            switch ( input.LA(1) ) {
            case Identifier:
            case 30:
            case 32:
                {
                alt5=1;
                }
                break;
            case 28:
                {
                alt5=2;
                }
                break;
            case 37:
                {
                alt5=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:4: ( ( ( Identifier valueAllocate ) | read_statement | print_statement ) INSTRUCTION_END )
                    {
                    dbg.location(11,4);
                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:4: ( ( ( Identifier valueAllocate ) | read_statement | print_statement ) INSTRUCTION_END )
                    dbg.enterAlt(1);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:6: ( ( Identifier valueAllocate ) | read_statement | print_statement ) INSTRUCTION_END
                    {
                    dbg.location(11,6);
                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:6: ( ( Identifier valueAllocate ) | read_statement | print_statement )
                    int alt4=3;
                    try { dbg.enterSubRule(4);
                    try { dbg.enterDecision(4, decisionCanBacktrack[4]);

                    switch ( input.LA(1) ) {
                    case Identifier:
                        {
                        alt4=1;
                        }
                        break;
                    case 32:
                        {
                        alt4=2;
                        }
                        break;
                    case 30:
                        {
                        alt4=3;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }

                    } finally {dbg.exitDecision(4);}

                    switch (alt4) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:7: ( Identifier valueAllocate )
                            {
                            dbg.location(11,7);
                            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:7: ( Identifier valueAllocate )
                            dbg.enterAlt(1);

                            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:8: Identifier valueAllocate
                            {
                            dbg.location(11,8);
                            match(input,Identifier,FOLLOW_Identifier_in_anweisungen62); 
                            dbg.location(11,19);
                            pushFollow(FOLLOW_valueAllocate_in_anweisungen64);
                            valueAllocate();

                            state._fsp--;


                            }


                            }
                            break;
                        case 2 :
                            dbg.enterAlt(2);

                            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:36: read_statement
                            {
                            dbg.location(11,36);
                            pushFollow(FOLLOW_read_statement_in_anweisungen69);
                            read_statement();

                            state._fsp--;


                            }
                            break;
                        case 3 :
                            dbg.enterAlt(3);

                            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:53: print_statement
                            {
                            dbg.location(11,53);
                            pushFollow(FOLLOW_print_statement_in_anweisungen73);
                            print_statement();

                            state._fsp--;


                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(4);}

                    dbg.location(11,71);
                    match(input,INSTRUCTION_END,FOLLOW_INSTRUCTION_END_in_anweisungen77); 

                    }


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:90: if_statement
                    {
                    dbg.location(11,90);
                    pushFollow(FOLLOW_if_statement_in_anweisungen81);
                    if_statement();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:11:105: while_statement
                    {
                    dbg.location(11,105);
                    pushFollow(FOLLOW_while_statement_in_anweisungen85);
                    while_statement();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(11, 119);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "anweisungen");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "anweisungen"



    // $ANTLR start "dataType"
    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:13:1: dataType : ( 'integer' | 'real' | 'string' | 'boolean' ) ;
    public final void dataType() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "dataType");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(13, 0);

        try {
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:14:2: ( ( 'integer' | 'real' | 'string' | 'boolean' ) )
            dbg.enterAlt(1);

            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:
            {
            dbg.location(14,2);
            if ( input.LA(1)==22||input.LA(1)==29||(input.LA(1) >= 33 && input.LA(1) <= 34) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(14, 46);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "dataType");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "dataType"



    // $ANTLR start "arithmetic_operators"
    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:16:1: arithmetic_operators : ( ADDITION | SUBTRACTION | MULTIPLICATION | DIVISION | CLAMP_OPEN | CLAMP_CLOSE );
    public final void arithmetic_operators() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "arithmetic_operators");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(16, 0);

        try {
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:17:2: ( ADDITION | SUBTRACTION | MULTIPLICATION | DIVISION | CLAMP_OPEN | CLAMP_CLOSE )
            dbg.enterAlt(1);

            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:
            {
            dbg.location(17,2);
            if ( input.LA(1)==ADDITION||(input.LA(1) >= CLAMP_CLOSE && input.LA(1) <= CLAMP_OPEN)||input.LA(1)==DIVISION||input.LA(1)==MULTIPLICATION||input.LA(1)==SUBTRACTION ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(17, 80);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "arithmetic_operators");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "arithmetic_operators"



    // $ANTLR start "valueAllocate"
    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:21:1: valueAllocate : ALLOCATE ( ( arithmetic_operators )? | String_value | Integer_value | ( 'true' | 'false' ) | Real_vlaue | Compare_operators ) ;
    public final void valueAllocate() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "valueAllocate");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(21, 0);

        try {
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:2: ( ALLOCATE ( ( arithmetic_operators )? | String_value | Integer_value | ( 'true' | 'false' ) | Real_vlaue | Compare_operators ) )
            dbg.enterAlt(1);

            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:5: ALLOCATE ( ( arithmetic_operators )? | String_value | Integer_value | ( 'true' | 'false' ) | Real_vlaue | Compare_operators )
            {
            dbg.location(22,5);
            match(input,ALLOCATE,FOLLOW_ALLOCATE_in_valueAllocate149); 
            dbg.location(22,14);
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:14: ( ( arithmetic_operators )? | String_value | Integer_value | ( 'true' | 'false' ) | Real_vlaue | Compare_operators )
            int alt7=6;
            try { dbg.enterSubRule(7);
            try { dbg.enterDecision(7, decisionCanBacktrack[7]);

            switch ( input.LA(1) ) {
            case ADDITION:
            case CLAMP_CLOSE:
            case CLAMP_OPEN:
            case DIVISION:
            case INSTRUCTION_END:
            case MULTIPLICATION:
            case SUBTRACTION:
                {
                alt7=1;
                }
                break;
            case String_value:
                {
                alt7=2;
                }
                break;
            case Integer_value:
                {
                alt7=3;
                }
                break;
            case 26:
            case 36:
                {
                alt7=4;
                }
                break;
            case Real_vlaue:
                {
                alt7=5;
                }
                break;
            case Compare_operators:
                {
                alt7=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(7);}

            switch (alt7) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:16: ( arithmetic_operators )?
                    {
                    dbg.location(22,16);
                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:16: ( arithmetic_operators )?
                    int alt6=2;
                    try { dbg.enterSubRule(6);
                    try { dbg.enterDecision(6, decisionCanBacktrack[6]);

                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==ADDITION||(LA6_0 >= CLAMP_CLOSE && LA6_0 <= CLAMP_OPEN)||LA6_0==DIVISION||LA6_0==MULTIPLICATION||LA6_0==SUBTRACTION) ) {
                        alt6=1;
                    }
                    } finally {dbg.exitDecision(6);}

                    switch (alt6) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:17: arithmetic_operators
                            {
                            dbg.location(22,17);
                            pushFollow(FOLLOW_arithmetic_operators_in_valueAllocate154);
                            arithmetic_operators();

                            state._fsp--;


                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(6);}


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:42: String_value
                    {
                    dbg.location(22,42);
                    match(input,String_value,FOLLOW_String_value_in_valueAllocate160); 

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:57: Integer_value
                    {
                    dbg.location(22,57);
                    match(input,Integer_value,FOLLOW_Integer_value_in_valueAllocate164); 

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:73: ( 'true' | 'false' )
                    {
                    dbg.location(22,73);
                    if ( input.LA(1)==26||input.LA(1)==36 ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        dbg.recognitionException(mse);
                        throw mse;
                    }


                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:94: Real_vlaue
                    {
                    dbg.location(22,94);
                    match(input,Real_vlaue,FOLLOW_Real_vlaue_in_valueAllocate178); 

                    }
                    break;
                case 6 :
                    dbg.enterAlt(6);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:22:108: Compare_operators
                    {
                    dbg.location(22,108);
                    match(input,Compare_operators,FOLLOW_Compare_operators_in_valueAllocate183); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(7);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(22, 126);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "valueAllocate");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "valueAllocate"



    // $ANTLR start "if_statement"
    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:25:1: if_statement : 'if' compare then_statement ( else_statement )? 'fi' ;
    public final void if_statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "if_statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(25, 0);

        try {
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:26:2: ( 'if' compare then_statement ( else_statement )? 'fi' )
            dbg.enterAlt(1);

            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:26:4: 'if' compare then_statement ( else_statement )? 'fi'
            {
            dbg.location(26,4);
            match(input,28,FOLLOW_28_in_if_statement200); 
            dbg.location(26,9);
            pushFollow(FOLLOW_compare_in_if_statement202);
            compare();

            state._fsp--;

            dbg.location(26,17);
            pushFollow(FOLLOW_then_statement_in_if_statement204);
            then_statement();

            state._fsp--;

            dbg.location(26,32);
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:26:32: ( else_statement )?
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8, decisionCanBacktrack[8]);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==24) ) {
                alt8=1;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:26:33: else_statement
                    {
                    dbg.location(26,33);
                    pushFollow(FOLLOW_else_statement_in_if_statement207);
                    else_statement();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}

            dbg.location(26,50);
            match(input,27,FOLLOW_27_in_if_statement211); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(26, 53);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "if_statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "if_statement"



    // $ANTLR start "then_statement"
    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:28:1: then_statement : 'then' ( deklarationen | anweisungen )* ;
    public final void then_statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "then_statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(28, 0);

        try {
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:28:17: ( 'then' ( deklarationen | anweisungen )* )
            dbg.enterAlt(1);

            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:28:19: 'then' ( deklarationen | anweisungen )*
            {
            dbg.location(28,19);
            match(input,35,FOLLOW_35_in_then_statement221); 
            dbg.location(28,26);
            // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:28:26: ( deklarationen | anweisungen )*
            try { dbg.enterSubRule(9);

            loop9:
            do {
                int alt9=3;
                try { dbg.enterDecision(9, decisionCanBacktrack[9]);

                int LA9_0 = input.LA(1);

                if ( (LA9_0==22||LA9_0==29||(LA9_0 >= 33 && LA9_0 <= 34)) ) {
                    alt9=1;
                }
                else if ( (LA9_0==Identifier||LA9_0==28||LA9_0==30||LA9_0==32||LA9_0==37) ) {
                    alt9=2;
                }


                } finally {dbg.exitDecision(9);}

                switch (alt9) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:28:28: deklarationen
            	    {
            	    dbg.location(28,28);
            	    pushFollow(FOLLOW_deklarationen_in_then_statement225);
            	    deklarationen();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // /Users/foxhound/Documents/HAW/ci/Praktikum/Aufgabe1/miniP.g:28:44: anweisungen
            	    {
            	    dbg.location(28,44);
            	    pushFollow(FOLLOW_anweisungen_in_then_statement229);
            	    anweisungen();

            	    state._fsp--;


            	    }
            	    break;
